# OAK-D-Lite-Autonomous-LEGO-audi-rs-q-e-tron-42160

./: .gitignore  README.md  pyproject.toml  tasks.py
diagrams/: HighLevelArchitecture.drawio  README.md
scripts/: README.md  config.txt  install_dependencies.sh  install_pyenv_dependencies.sh  latest_python_versions.py
src/lego-audi-42160-oakdlite-rpi4-buwizz3/: buwizz.py
src/lego-audi-42160-oakdlite-rpi4-buwizz3/ble/: __init__.py  buwizz.py
src/lego-audi-42160-oakdlite-rpi4-buwizz3/utils/: record.py
