[tool.poetry]
name = "lego-audi-42160-oakdlite-rpi4-buwizz3"
version = "0.1.0"
description = ""
authors = ["Josh Peak <neozenith.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
depthai = "^2.23.0.0"
bleak = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
